--- a/app/src/main/res/layout/activity_qrcheckin.xml
+++ b/app/src/main/res/layout/activity_qrcheckin.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.QRCheckinActivity">
+    tools:context=".ui.Activity.QRCheckinActivity">
 
 </android.support.constraint.ConstraintLayout>
