--- a/app/src/main/res/layout/fragment_attendee_display.xml
+++ b/app/src/main/res/layout/fragment_attendee_display.xml
@@ -1,55 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical"
-	android:background="@color/background"
-	tools:context=".ui.Activity.MainActivity">
+	android:animateLayoutChanges="true">
+
+	<android.support.v4.widget.SwipeRefreshLayout
+		android:id="@+id/swipeRefreshLayout"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:padding="4dp"
+				android:layout_marginTop="10dp"
+				android:layout_marginBottom="5dp"
+				android:gravity="center"
+				android:textColor="@color/colorPrimary"
+				android:textStyle="bold"
+				android:text="@string/conference_room_attendee_display"
+				android:textSize="20sp"
+				/>
+			<android.support.v7.widget.RecyclerView
+			android:id="@+id/attendee_recycler_view"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"/>
+		</LinearLayout>
+	</android.support.v4.widget.SwipeRefreshLayout>
+
 
 	<ProgressBar
 		android:id="@+id/progressBar"
-		style="?android:attr/progressBarStyleHorizontal"
-		android:layout_width="match_parent"
-		android:layout_height="14dp"
-		android:layout_marginTop="10dp"
-		android:indeterminate="true"
-		android:translationY="7dp"
-		android:visibility="gone" />
-
-	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		android:padding="4dp"
-		android:layout_marginTop="10dp"
-		android:layout_marginBottom="5dp"
-		android:gravity="center"
-		android:textColor="@color/colorPrimary"
-		android:textStyle="bold"
-		android:text="@string/conference_room_attendee_display"
-		android:textSize="20sp"
-		/>
+		android:visibility="gone"/>
 
-	<View
-		android:layout_width="match_parent"
-		android:layout_height="1dp"
-		android:layout_marginRight="20dp"
-		android:layout_marginLeft="20dp"
-		android:background="@color/card"/>
-
-	<FrameLayout
-		android:layout_width="match_parent"
+	<TextView
+		android:id="@+id/tvPlaceholder"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="5dp"
-		android:layout_marginRight="5dp"
-		android:layout_marginBottom="5dp"
-		android:layout_marginTop="5dp">
+		android:layout_gravity="center"
+		android:fontFamily="sans-serif"
+		android:text="@string/no_list_available"
+		android:textSize="@dimen/title_textSize"
+		android:visibility="gone"/>
 
-		<android.support.v7.widget.RecyclerView
-			android:id="@+id/attendee_recycler_view"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-		</android.support.v7.widget.RecyclerView>
-	</FrameLayout>
-</LinearLayout>
+</FrameLayout>
