--- a/app/src/main/res/layout/fragment_attendee_display.xml
+++ b/app/src/main/res/layout/fragment_attendee_display.xml
@@ -9,8 +9,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
 			android:orientation="vertical">
 			<TextView
 				android:layout_width="wrap_content"
